# rust-ts3plugin

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  README.md  README.tpl  clippy.toml
src/: build.rs  lib.rs  plugin.rs  ts3interface.rs
