[package]
name = "ts3plugin"
version = "0.3.0"
authors = ["Flakebi <flakebi@t-online.de>"]
description = """
An abstraction layer that simplifies creating TeamSpeak3 plugins
and stores received data to provide a more convenient API.
"""
repository = "https://github.com/ReSpeak/rust-ts3plugin"
readme = "README.md"
keywords = ["plugin", "TeamSpeak3", "TS3"]
categories = ["api-bindings"]
license = "MIT/Apache-2.0"
build = "build/build.rs"

[lib]
name = "ts3plugin"
# Needed for cargo-readme
path = "src/lib.rs"

[features]
default = []

[dependencies]
chrono = "0.4"
lazy_static = "1"
ts3plugin-sys = "0.5"

[build-dependencies]
error-chain = "0.10"
serde = "1"
tera = "0.11"
